[package]
name = "itv-composer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "itv-relay"
path = "src/main.rs"

[profile.release]
panic = "abort"
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time", "net"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
nix = { version = "0.29", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
async-channel = "2"
futures-util = "0.3"
tokio-stream = "0.1"
